crates/rome_diagnostics/tests/macros/description_paren.stderr
error: unexpected token
 --> tests/macros/description_paren.rs:4:22
  |
4 | #[diagnostic(message(description("description")))]
  |                      ^^^^^^^^^^^
